{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 665,
  "lineage": "b91a7845-9648-6f15-5fa0-5e20294d24f4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:listener/app/alb-fargate-ecs/e99fdd45b91fde3c/8ba6e5ee8aca248c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:targetgroup/blockchain/371a7205b6df9355",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:698347480743:listener/app/alb-fargate-ecs/e99fdd45b91fde3c/8ba6e5ee8aca248c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:loadbalancer/app/alb-fargate-ecs/e99fdd45b91fde3c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb_target_group.app_target_group",
            "module.alb.aws_lb.alb_ecs",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:targetgroup/blockchain/371a7205b6df9355",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:listener-rule/app/alb-fargate-ecs/e99fdd45b91fde3c/8ba6e5ee8aca248c/4504fac4b37700f0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:698347480743:listener-rule/app/alb-fargate-ecs/e99fdd45b91fde3c/8ba6e5ee8aca248c/4504fac4b37700f0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:listener/app/alb-fargate-ecs/e99fdd45b91fde3c/8ba6e5ee8aca248c",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb_listener.application",
            "module.alb.aws_alb_target_group.app_target_group",
            "module.alb.aws_lb.alb_ecs",
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:targetgroup/blockchain/371a7205b6df9355",
            "arn_suffix": "targetgroup/blockchain/371a7205b6df9355",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:698347480743:targetgroup/blockchain/371a7205b6df9355",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blockchain",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:698347480743:loadbalancer/app/alb-fargate-ecs/e99fdd45b91fde3c",
            "arn_suffix": "app/alb-fargate-ecs/e99fdd45b91fde3c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-fargate-ecs-564417248.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:698347480743:loadbalancer/app/alb-fargate-ecs/e99fdd45b91fde3c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-fargate-ecs",
            "security_groups": [
              "sg-09599f332ac987832"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033bbfc66256fc901"
              },
              {
                "subnet_id": "subnet-04bf2790c6626e90d"
              }
            ],
            "subnets": [
              "subnet-033bbfc66256fc901",
              "subnet-04bf2790c6626e90d"
            ],
            "tags": {
              "Environment": "production",
              "Name": "alb-ecs-fargate"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "alb-ecs-fargate"
            },
            "vpc_id": "vpc-0164e0045aee0ab01",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:route-table/rtb-0cf85f162be315c9c",
            "default_route_table_id": "rtb-0cf85f162be315c9c",
            "id": "rtb-0cf85f162be315c9c",
            "owner_id": "698347480743",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:internet-gateway/igw-048844eddb3858487",
            "id": "igw-048844eddb3858487",
            "owner_id": "698347480743",
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048844eddb3858487",
            "id": "r-rtb-077cf35d757f46cc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077cf35d757f46cc8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:route-table/rtb-077cf35d757f46cc8",
            "id": "rtb-077cf35d757f46cc8",
            "owner_id": "698347480743",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02822f06189143024",
            "route_table_id": "rtb-077cf35d757f46cc8",
            "subnet_id": "subnet-033bbfc66256fc901"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edf8bdc74151797d",
            "route_table_id": "rtb-077cf35d757f46cc8",
            "subnet_id": "subnet-04bf2790c6626e90d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:security-group/sg-09599f332ac987832",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09599f332ac987832",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "698347480743",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:subnet/subnet-02044f16bc3d343fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.128.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02044f16bc3d343fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1e-0"
            },
            "tags_all": {
              "Name": "subnet-us-east-1e-0"
            },
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:subnet/subnet-07784b8c3659f4f92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.128.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07784b8c3659f4f92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1d-1"
            },
            "tags_all": {
              "Name": "subnet-us-east-1d-1"
            },
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:subnet/subnet-033bbfc66256fc901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.128.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033bbfc66256fc901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1e-0"
            },
            "tags_all": {
              "Name": "subnet-us-east-1e-0"
            },
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:subnet/subnet-04bf2790c6626e90d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.128.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bf2790c6626e90d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698347480743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-us-east-1d-1"
            },
            "tags_all": {
              "Name": "subnet-us-east-1d-1"
            },
            "vpc_id": "vpc-0164e0045aee0ab01"
          },
          "dependencies": [
            "module.vpc.aws_vpc.elliotts_aws_sandbox",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_integer.rand_int"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "elliotts_aws_sandbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698347480743:vpc/vpc-0164e0045aee0ab01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-0e6fdb393e4f9f2af",
            "default_route_table_id": "rtb-0cf85f162be315c9c",
            "default_security_group_id": "sg-0437c714cb3ef1946",
            "dhcp_options_id": "dopt-096e754511b12fcbc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0164e0045aee0ab01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf85f162be315c9c",
            "owner_id": "698347480743",
            "tags": {
              "Name": "elliott_arnold_vpc_sandbox-5"
            },
            "tags_all": {
              "Name": "elliott_arnold_vpc_sandbox-5"
            }
          },
          "dependencies": [
            "module.vpc.random_integer.rand_int"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}